force-app/main/default/objects/visit_action_plan__mdt/visit_action_plan__mdt.object-meta.xml
<CustomObject>
    <label>visit action plan</label>
    <pluralLabel>visit action plans</pluralLabel>
</CustomObject>