force-app/main/default/objects/visit_action_plan__mdt/fields/Account_Action_plan_version_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Action_plan_version_Id__c</fullName>
    <label>Account Action plan version Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>