force-app/main/default/objects/visit_action_plan__mdt/fields/Lead_Action_plan_version_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Action_plan_version_Id__c</fullName>
    <label>Lead Action plan version Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>