force-app/main/default/objects/visit_action_plan__mdt/fields/opportunity_action_plan_template_Id__c.field-meta.xml
<CustomField>
    <fullName>opportunity_action_plan_template_Id__c</fullName>
    <label>Opportunity action plan template Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>