force-app/main/default/objects/visit_action_plan__mdt/fields/Order_Action_plan_version_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Action_plan_version_Id__c</fullName>
    <label>Order Action plan version Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>