force-app/main/default/objects/visit_action_plan__mdt/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>